<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
     android:layout_height="match_parent">
<ScrollView
   android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:divider="@drawable/separador">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Como Agregar un Articulo"
            android:clickable="true"
        android:id="@+id/textView11"
        android:layout_marginBottom="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:text="@string/ayudaAgregar"
        android:textColor="#f40394"
        android:visibility="gone"
        android:ems="10"
        android:focusable="false"

        android:id="@+id/editText2" />

    <TextView
        android:layout_width="wrap_content"
        android:clickable="true"

        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Editar/Eliminar un Articulo"
        android:id="@+id/textView12"
        android:layout_marginBottom="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:text="@string/ayudaEliminar"
        android:visibility="gone"
        android:focusable="false"

        android:textColor="#f40394"
        android:ems="10"
        android:id="@+id/editText3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Agregar Categorias/Zonas"
        android:clickable="true"

        android:id="@+id/textView13"
        android:layout_marginBottom="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:focusable="false"


        android:text="@string/ayudaCtategoria"
       android:visibility="gone"
        android:textColor="#f40394"
        android:ems="10"
        android:id="@+id/editText4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"

        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Eliminar Base de datos"
        android:id="@+id/textView14"
        android:layout_marginBottom="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:text="@string/ayudaBaseDatos"
        android:visibility="gone"
        android:textColor="#f40394"
        android:ems="10"
        android:focusable="false"

        android:id="@+id/editText5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"

        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Exportar Inventario a Excel"
        android:id="@+id/textView15" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:visibility="gone"
        android:text="@string/Exportarinv"
        android:textColor="#f40394"
        android:ems="10"
        android:focusable="false"

        android:id="@+id/editText6" />

</LinearLayout>
</ScrollView>
    </RelativeLayout>